syntax = "proto3";
package kratos.api;

option go_package = "achievement/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    google.protobuf.Duration read_timeout = 4;
    google.protobuf.Duration write_timeout = 5;
  }
  message AchievementMq{
    message Achievement{
      string groupName = 1;
    }
    Achievement achievement = 1;
    string serverAddress = 2;
    string secretKey = 3;
    string accessKey = 4;
    string nameSpace = 5;
  }
  Database database = 1;
  Redis redis = 2;
  AchievementMq achievementMq = 3;
}

